🐛 fix: 适配最新版的思源; 适配新版本的 mermaid

--- a/src/core/index.module.scss
+++ b/src/core/index.module.scss
@@ -1,3 +1,7 @@
+.data-query-embed {
+    cursor: default;
+}
+
 .js-query-data-view {
     margin: 5px auto;
 }
@@ -52,8 +56,6 @@
         }
     }
 }
-
-
 
 .remove-mermaid {
     /* 缓慢删除, 向下移动退场 */
