✨ feat: Markdown 组件支持渲染数学公式

--- a/src/core/index.module.scss
+++ b/src/core/index.module.scss
@@ -107,3 +107,9 @@
         word-break: break-word;
     }
 }
+
+.katex-center-display {
+    display: flex;
+    justify-content: center;
+    margin: 1em 0;
+}
