⚡️ perf: 将 Makrdown 组件单独内聚出来

--- a/src/core/index.module.scss
+++ b/src/core/index.module.scss
@@ -10,6 +10,14 @@
     // overflow-x: hidden;
 }
 
+.markdown-component {
+    :global(.protyle-action) {
+        // display: none !important;
+        cursor: default;
+        pointer-events: none !important;
+    }
+}
+
 .embed-container[data-node-id] {
     border: 1px solid var(--b3-border-color);
     padding: 0.5em;
